--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,9 +1,98 @@
-header{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: #434343;
+}
+
+// header
+.header{
     height: 50px;
     display: flex;
-    background-color: pink;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 10px;
+    background-color: black;
 
     img{
-        max-width: 50px;
+        max-width: 100px;
     }
+
+    .search-barr{
+        border-radius: 5px;
+    }
+
+    button{
+        margin-left: 10px;
+        border-radius: 5px;
+    }
+
 }
+
+// main
+.main{
+    .title-list{
+        padding: 10px 30px;
+        color: grey;
+    }
+    .titles-container{
+        display: flex;
+        overflow-x: scroll;
+    }
+
+    li{
+        list-style-type: none;
+    }
+
+    .cards-container{
+        margin: 10px;
+        width: 500px;
+        height: 281px;
+        flex-shrink: 0;
+        border-radius: 5px;
+        overflow: hidden;
+        cursor: pointer;
+
+        .img-container{
+            width: 100%;
+            overflow: hidden;
+            text-align: center;
+            line-height: 281px;
+            vertical-align: middle;
+            font-size: 50px;
+
+            img{
+                width: 100%;
+            }
+        }
+
+        .list-container{
+            width: 100%;
+            text-align: center;
+            border: 2px solid black;
+            height: 281px;
+            overflow-y: scroll;
+            display: none;
+            color: grey;
+            
+            li{
+                margin-top: 10px;
+            }
+            
+        }
+    }
+
+    .cards-container :hover {
+        .list-container{
+            display: block;
+        }
+        .img-container{
+            display: none;
+        }
+    }
+
+}
+
