--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    ::-webkit-scrollbar {
+        display: none;
+      }
 }
 
 body{
@@ -10,6 +13,8 @@ body{
 
 // header
 .header{
+    position: fixed;
+    width: 100%;
     height: 50px;
     display: flex;
     justify-content: space-between;
@@ -34,6 +39,7 @@ body{
 
 // main
 .main{
+    padding-top: 50px;
     .title-list{
         padding: 10px 30px;
         color: grey;
